Create carousel component

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -8,7 +8,7 @@
 :root {
   --green: #4D8B31;
   --orange: #FF8427;
-  --yellow: #FFC800;
+  --primary: #FFC800;
   --dark: #1E212B;
   --white: #FFFFFF;
 }
