--- a/web/src/styles/pages/Parent.module.css
+++ b/web/src/styles/pages/Parent.module.css
@@ -1,3 +1,11 @@
+h1 {
+  font-size: 3.75rem;
+  font-weight: 800;
+  color: #000000;
+  opacity: 0.8;
+  margin-bottom: 2rem;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -40,14 +48,6 @@
   margin-bottom: 2rem;
 }
 
-.firstSection section article h1 {
-  font-size: 3.75rem;
-  font-weight: 800;
-  color: #000000;
-  opacity: 0.8;
-  margin-bottom: 2rem;
-}
-
 .firstSection img {
   width: 500px;
 }
@@ -61,9 +61,60 @@
 }
 
 .seeMore svg {
-  cursor: pointer;  
+  cursor: pointer;
+  transition: transform .4s;
+  color: var(--dark);
 }
 
 .seeMore svg:hover {
+  transform: translateY(.4rem);
+}
 
+.steps {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 10rem;
+}
+
+.steps div {
+  width: 365px;
+  height: 233px;
+  background: rgba(255, 200, 0, 0.17);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.steps div h2 {
+  font-size: 3.4rem;
+  font-weight: normal;
+}
+
+.steps div span {
+  font-size: 1.2rem;
+  width: 80%;
+}
+
+.kitSection {
+  width: 100%;
+  height: 12rem; 
+  background: var(--primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.kitSection h2 {
+  font-size: 2.8rem;
+  color: var(--white);
+  margin-bottom: 1rem;
+}
+
+.kitSection p {
+  width: 45%; 
 }
