Parent page with carousel

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
 }
 
@@ -14,6 +14,7 @@ html {
   --orange: #FF8427;
   --primary: #FFC800;
   --dark: #1E212B;
+  --footer: ##F3F4F6;
   --white: #FFFFFF;
 }
 
@@ -27,11 +28,6 @@ html {
   html {
     font-size: 87.5%;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--text);
 }
 
 body,
