--- a/web/src/styles/components/Carousel.module.css
+++ b/web/src/styles/components/Carousel.module.css
@@ -1,11 +1,12 @@
 .carouselContainer {
-  width: 95%;
-  height: 35rem;
+  width: 89%;
+  min-height: 40rem;
+  height: 40rem;
   margin-top: 0;
 }
 
 .card {
-  width: 99%;
+  width: 100%;
   height: 30rem;
   border-radius: 8px;
   background: #F9FAFB;
@@ -14,45 +15,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  backface-visibility: hidden;
-  transition: transform .3s;
-  box-shadow: 0 0 60px rgba(0, 0, 0, 0.8);
+  transition: all .3s;
+  box-shadow: -15px 15px 10px -15px #111;
+  margin-bottom: 4rem;
 }
 
-.card button {
+.card:hover {
+  margin-top: 2rem;
+  border: 2px solid #000;
+  transform: scale(1.1);
   
 }
 
-.card header {
-  background: var(--white);
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  pointer-events: none;
-}
-
-.card ul {
-  list-style: none;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-top: 2rem;
-  pointer-events: none;
-}
-
-
-.selected {
-  margin-top: 3.1rem;
-  position: absolute;
-  z-index: 3;
-  border: 2px solid #000;
-  transform: scale(1.1);
-}
-
-.selected .bean {
+.card:hover .bean {
   position: absolute;
   top: -.6rem;
   border-radius: 1rem;
@@ -60,3 +35,54 @@
   height: 1.2rem;
   background: var(--dark);
 }
+
+.card a {
+  width: 90%;
+  height: 58px;
+  cursor: pointer;
+}
+
+.card button {
+  background: var(--white);
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
+  margin-bottom: 2rem;
+  transition: all .3s;
+  user-select: none;
+}
+
+.card:hover button {
+  margin-bottom: 2rem;
+  background: var(--dark);
+  color: var(--white);
+  box-shadow: none;
+}
+
+.card header {
+  background: var(--white);
+  width: 100%;
+  height: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  pointer-events: none;
+  user-select: none;
+}
+
+.card ul {
+  list-style: none;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 2rem;
+  pointer-events: none;
+  align-self: flex-start;
+  user-select: none;  
+}
+
+.card ul li {
+  font-size: .8rem;
+}
+
+
