--- a/web/src/styles/components/Carousel.module.css
+++ b/web/src/styles/components/Carousel.module.css
@@ -62,6 +62,7 @@
   width: 100%;
   height: 7rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
