--- a/web/src/styles/components/Carousel.module.css
+++ b/web/src/styles/components/Carousel.module.css
@@ -1,12 +1,12 @@
 .carouselContainer {
-  width: 89%;
+  width: 100%;
   min-height: 40rem;
   height: 40rem;
   margin-top: 0;
 }
 
 .card {
-  width: 100%;
+  width: 94.8%;
   height: 30rem;
   border-radius: 8px;
   background: #F9FAFB;
@@ -20,14 +20,15 @@
   margin-bottom: 4rem;
 }
 
-.card:hover {
+.selected {
+  position: absolute;
+  z-index: 5;
   margin-top: 2rem;
   border: 2px solid #000;
   transform: scale(1.1);
-  
 }
 
-.card:hover .bean {
+.selected .bean {
   position: absolute;
   top: -.6rem;
   border-radius: 1rem;
@@ -50,7 +51,7 @@
   user-select: none;
 }
 
-.card:hover button {
+.selected button {
   margin-bottom: 2rem;
   background: var(--dark);
   color: var(--white);
