--- a/web/src/styles/components/Header.module.css
+++ b/web/src/styles/components/Header.module.css
@@ -10,7 +10,7 @@
 
 .header div {
   display: flex;
-  width: 40%;
+  width: 45%;
   justify-content: space-evenly;
 }
 
@@ -37,24 +37,28 @@ header a:not( :hover )::after {
   width: 100%;
   height: 2px;
   background: var(--dark);
-  animation: slideLeft .3s forwards;
+  animation: slideLeft .5s forwards;
 }
 
 @keyframes slideRight{
   from {
     width: 0;
+    
   }
 
   to {
     width: 100%;
+    
   }
 }
 
 @keyframes slideLeft {
   from {
     width: 100%;
+    height: 2px
   } 
   to {
     width: 0;
+    height: 0;
   }
 }
