--- a/web/src/styles/pages/Parent.module.css
+++ b/web/src/styles/pages/Parent.module.css
@@ -1,11 +1,3 @@
-h1 {
-  font-size: 3.75rem;
-  font-weight: 800;
-  color: #000000;
-  opacity: 0.8;
-  margin-bottom: 2rem;
-}
-
 .container {
   width: 100%;
   display: flex;
@@ -41,6 +33,14 @@ h1 {
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
+}
+
+.detailsContainer h1 {
+  font-size: 3.75rem;
+  font-weight: 800;
+  color: #000000;
+  opacity: 0.8;
+  margin-bottom: 2rem;
 }
 
 .firstSection section article {
