--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -102,7 +102,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around; 
+  justify-content: space-around;
+  transition: all .3s;
 }
 
 .profiles section h4 {
