--- a/web/src/styles/components/LoginModal.module.css
+++ b/web/src/styles/components/LoginModal.module.css
@@ -30,5 +30,10 @@
     top: 0.6rem;
     left: 0.6rem;
     cursor: pointer;
+    transition: filter .3s;
+  }
+
+  .modal > svg:hover {
+    filter: brightness(.9);
   }
   
