--- a/web/src/styles/components/ImageInput.module.css
+++ b/web/src/styles/components/ImageInput.module.css
@@ -1,6 +1,8 @@
 .preview {
   position: absolute;
   cursor: pointer;
+  transform: translateY(-1rem);
+  z-index: 2;
 }
 
 .preview::after {
@@ -54,6 +56,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transform: translateY(-1rem);
 }
 
 .inputBox label::after {
