--- a/web/src/styles/pages/ListStudents.module.css
+++ b/web/src/styles/pages/ListStudents.module.css
@@ -54,6 +54,7 @@ justify-content: center;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 6px;
+    cursor: pointer;
 }
 .card > img{
 height: 140px;
