--- a/web/src/styles/components/Payment.module.css
+++ b/web/src/styles/components/Payment.module.css
@@ -34,5 +34,42 @@
   border-radius: 8px;
   padding: 10px;
   position: relative;
-  font-size: .9rem;
+  font-size: 0.9rem;
+}
+
+.loading {
+  position:relative;
+	text-align:center;
+	width:100px;
+	height:100px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.dot {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  margin-right: 3px;
+  background: #303131;
+  animation: loading 1.3s linear infinite;
+}
+
+.dot:nth-child(2) {
+  animation-delay: -1.1s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+
+@keyframes loading {
+  0%, 60%, 100% {
+		transform: initial;
+	}
+
+	30% {
+		transform: translateY(-15px);
+	}
 }
