--- a/web/src/styles/pages/ListStudents.module.css
+++ b/web/src/styles/pages/ListStudents.module.css
@@ -1,71 +1,101 @@
-.header{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    flex-direction: column;
-    height: 10rem;
-    border-bottom: 1px solid;
-    position: relative;
+.header {
+  position: absolute;
+  top: 0;
+  background: var(--white);
+  display: flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: column;
+  height: 10rem;
+  border-bottom: 1px solid #000;
 }
 
+.header > div:first-child {
+  background: var(--primary);
+  border-radius: 50%;
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter .3s;
+  cursor: pointer;
+  transition: filter .3s;
+}
+
+.header > div:first-child:hover {
+  filter: brightness(.9);
+}
+
+
 .header h1 {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .header .select {
-    width: 500px;
-    position: absolute;
-    bottom: -1.7rem;
+  width: 500px;
+  position: absolute;
+  bottom: -1.7rem;
 }
 
 .header .select:after {
-    content: "Filtrar";
-    position: absolute;
-    top: 1rem;
-    right: 2.5rem;
-    pointer-events: none;
+  content: "Filtrar";
+  position: absolute;
+  top: 1rem;
+  right: 2.5rem;
+  pointer-events: none;
 }
 
-.container{
-background: var(--light);
-width: 100%;
-height: 100vh;
-display: flex;
-justify-content: center;
-}
-.list{
-    position: absolute;
-    width: 70%;
-    left: 15rem;
-    top: 15rem;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 1rem;
-    justify-content: center;
+.container {
+  background: var(--light);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card{
-    justify-content: space-between;
-    width: 500px;
-    height: 170px;
-    padding: 1rem;
-    background: var(--white);
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 6px;
-    cursor: pointer;
+.noStudents {
+  color: var(--dark);
+  opacity: 0.7;
 }
-.card > img{
-height: 140px;
-width: 140px;
-border-radius: 6px;
+
+.list {
+  position: absolute;
+  width: 70%;
+  left: 15rem;
+  top: 15rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  justify-content: center;
+}
+
+.card {
+  justify-content: space-between;
+  width: 500px;
+  height: 170px;
+  padding: 1rem;
+  background: var(--white);
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+  cursor: pointer;
+}
+.card > img {
+  height: 140px;
+  width: 140px;
+  border-radius: 6px;
 }
 
 .card article {
-    width: 65%;
+  width: 65%;
 }
 
 .card article p:last-child {
-    font-size: .8rem;
+  font-size: 0.8rem;
 }
