--- a/web/src/styles/components/Carousel.module.css
+++ b/web/src/styles/components/Carousel.module.css
@@ -9,13 +9,13 @@
   width: 94.8%;
   height: 30rem;
   border-radius: 8px;
-  background: #F9FAFB;
+  background: #f9fafb;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  transition: all .3s;
+  transition: all 0.3s;
   box-shadow: -15px 15px 10px -15px #111;
   margin-bottom: 4rem;
 }
@@ -30,7 +30,7 @@
 
 .selected .bean {
   position: absolute;
-  top: -.6rem;
+  top: -0.6rem;
   border-radius: 1rem;
   width: 9rem;
   height: 1.2rem;
@@ -47,7 +47,7 @@
   background: var(--white);
   box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
   margin-bottom: 2rem;
-  transition: all .3s;
+  transition: all 0.3s;
   user-select: none;
 }
 
@@ -84,11 +84,29 @@
   margin-top: 2rem;
   pointer-events: none;
   align-self: flex-start;
-  user-select: none;  
+  user-select: none;
 }
 
 .card ul li {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
+@media (max-width: 768px) {
 
+.selected {
+  position: absolute;
+  z-index: 5;
+  margin-top: 2rem;
+  border: 2px solid #000;
+  transform: scale(1.1);
+}
+
+.selected .bean {
+  position: absolute;
+  top: -0.6rem;
+  border-radius: 1rem;
+  width: 9rem;
+  height: 1.2rem;
+  background: var(--dark);
+}
+}
