--- a/web/src/styles/components/Footer.module.css
+++ b/web/src/styles/components/Footer.module.css
@@ -53,3 +53,31 @@
 .footer button:hover {
   filter: brightness(0.9);
 }
+
+@media (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    height: 20rem;
+  }
+
+  .footer div:first-child {
+    width: 70%;
+  }
+
+  .footer div:first-child span {
+    
+  }
+
+  .footer div:last-child {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer div:last-child button {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+}
