--- a/web/src/styles/components/Header.module.css
+++ b/web/src/styles/components/Header.module.css
@@ -14,6 +14,14 @@
   justify-content: space-evenly;
 }
 
+.header .detailButtons {
+  width: 60%;
+}
+
+.header .accountButtons {
+  width: 30%;
+}
+
 .header a {
   position: relative;
   cursor: pointer;
@@ -63,3 +71,20 @@ header a:not( :hover )::after {
     height: 0;
   }
 }
+
+
+@media (max-width: 768px) {
+
+  .header span {
+    display: none;
+  }
+
+  .header .detailButtons {
+    display: none;
+  }
+
+  .header .accountButtons {
+    width: 100%;
+  }
+}
+
