--- a/web/src/styles/components/LoginModal.module.css
+++ b/web/src/styles/components/LoginModal.module.css
@@ -37,3 +37,24 @@
     filter: brightness(.9);
   }
   
+@media (max-width: 768px) {
+  .modal {
+    width: 90%;
+    height: 500px;
+  }
+
+  .form {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .form input {
+    width: 100%;
+  }
+
+  .form button {
+    width: 90%;
+  }
+}
