--- a/web/src/styles/components/SuccessfulPayment.module.css
+++ b/web/src/styles/components/SuccessfulPayment.module.css
@@ -55,3 +55,10 @@
   color: rgba(30,33,43, 0.6);
   width: 90%;
 }
+
+@media (max-width: 768px) {
+  .modal {
+    width: 90%;
+    height: 35rem;
+  }
+}
