--- a/web/src/styles/pages/ListStudents.module.css
+++ b/web/src/styles/pages/ListStudents.module.css
@@ -1,13 +1,13 @@
 .header {
-  position: absolute;
-  top: 0;
+  position: relative;
   background: var(--white);
   display: flex;
   width: 100%;
+  height: 10rem;
   align-items: center;
   flex-direction: column;
-  height: 10rem;
   border-bottom: 1px solid #000;
+  margin-bottom: 5rem;
 }
 
 .header > div:first-child {
@@ -54,7 +54,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -64,10 +64,7 @@
 }
 
 .list {
-  position: absolute;
   width: 70%;
-  left: 15rem;
-  top: 15rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
@@ -98,4 +95,43 @@
 
 .card article p:last-child {
   font-size: 0.8rem;
+}
+
+@media (max-width: 768px) {
+
+  .header {
+    min-height: 10rem;
+    justify-content: center;
+    
+  }
+
+  .header h1 {
+    margin: 0;
+  }
+
+  .header .select {
+    width: 300px;
+    
+  }
+
+  .header > div:first-child {
+    left: 0.6rem;
+    top: 0.6rem;
+  }
+
+  .list {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: var(--light);
+  }
+
+  .card {
+    width: 90%;
+  }
+
+  .card:last-child {
+    margin-bottom: 2rem;
+  }
 }
