--- a/web/src/styles/pages/Parent.module.css
+++ b/web/src/styles/pages/Parent.module.css
@@ -119,7 +119,7 @@
 
 .kitSection h2 {
   font-size: 2.8rem;
-  color: var(--white);
+  color: var(--dark);
   margin-bottom: 1rem;
 }
 
@@ -129,4 +129,56 @@
 
 .noscroll {
   overflow:hidden;
+}
+
+@media (max-width: 768px) {
+  .detailsContainer img {
+    display: none;
+  }
+
+  .detailsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .detailsContainer section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .detailsContainer section article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .detailsContainer section article h1 {
+    width: 70%;
+  }
+
+  .detailsContainer button {
+    width: 90%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+  }
+
+  .steps {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .steps div {
+    margin-bottom: 2rem;
+  }
+
+  .kitSection {
+    height: 20rem;
+  }
+
+  .kitSection p {
+    width: 80%;
+    font-size: 1.2rem;
+  }
 }
