--- a/web/src/styles/components/Input.module.css
+++ b/web/src/styles/components/Input.module.css
@@ -40,3 +40,11 @@
 .inputBox input::-webkit-inner-spin-button {
   display: none;
 }
+
+.inputBox span {
+  position: absolute;
+  bottom: -1.5rem;
+  width: 25rem;
+  color: #E83F5B;
+  
+}
