--- a/web/src/styles/components/RegisterModal.module.css
+++ b/web/src/styles/components/RegisterModal.module.css
@@ -13,7 +13,7 @@
 
 .modal {
   width: 600px;
-  height: 600px;
+  min-height: 600px;
   background: var(--light);
   border-radius: 6px;
   position: relative;
@@ -37,6 +37,10 @@
   filter: brightness(.9);
 }
 
+.modal .form > div:first-child {
+  margin-top: 2rem;
+}
+
 .modal .rg {
   display: flex;
   width: 100%;
@@ -47,9 +51,17 @@
   width: 180px;
 }
 
+.modal button {
+  margin-bottom: 2rem;
+}
+
 @media (max-width: 768px) {
   .modal {
     width: 90%;
+  }
+
+  .modal .form > div:first-child {
+    margin-top: 4rem;
   }
 
   .modal .rg input {
