--- a/web/src/styles/pages/NotFound.module.css
+++ b/web/src/styles/pages/NotFound.module.css
@@ -1,11 +1,21 @@
-.container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container h1 {
+  text-align: center;
 }
 
 .container button {
-    width: 400px;
+  width: 400px;
+}
+
+@media (max-width: 768px) {
+  .container button {
+    width: 90%;
+  }
 }
