--- a/web/src/styles/components/Carousel.module.css
+++ b/web/src/styles/components/Carousel.module.css
@@ -92,21 +92,24 @@
 }
 
 @media (max-width: 768px) {
+  .selected {
+    position: absolute;
+    z-index: 5;
+    margin-top: 2rem;
+    border: 2px solid #000;
+    transform: scale(1.1);
+  }
 
-.selected {
-  position: absolute;
-  z-index: 5;
-  margin-top: 2rem;
-  border: 2px solid #000;
-  transform: scale(1.1);
-}
+  .selected .bean {
+    position: absolute;
+    top: -0.6rem;
+    border-radius: 1rem;
+    width: 9rem;
+    height: 1.2rem;
+    background: var(--dark);
+  }
 
-.selected .bean {
-  position: absolute;
-  top: -0.6rem;
-  border-radius: 1rem;
-  width: 9rem;
-  height: 1.2rem;
-  background: var(--dark);
-}
+  .card {
+    width: 100%;
+  }
 }
