--- a/web/src/styles/components/RegisterModal.module.css
+++ b/web/src/styles/components/RegisterModal.module.css
@@ -52,7 +52,22 @@
 }
 
 .modal button {
+  margin-bottom: 1rem;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 2rem;
+}
+
+.buttonContainer a {
+  cursor: pointer;
+}
+
+.buttonContainer a:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 768px) {
