--- a/web/src/styles/pages/ListChildrens.module.css
+++ b/web/src/styles/pages/ListChildrens.module.css
@@ -9,7 +9,7 @@
 
 .header {
   width: 100%;
-  height: 10rem;
+  min-height: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,22 +37,25 @@
 }
 
 .cards {
-  width: 70%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: var(--light);
 }
 
 .card {
   height: 10rem;
-  width: 100%;
+  width: 70%;
+  padding: 1rem;
+  background: var(--white);
   display: flex;
   align-items: center;
-  background: var(--white);
-  margin-bottom: 2rem;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  position: relative;
+  border-radius: 6px;
+  cursor: pointer;
+  justify-content: space-between;
+  margin-bottom: 2rem;
 }
 
 .card img {
@@ -141,7 +144,23 @@
     top: 0.6rem; 
   }
 
-  .cards {
+  .card {
     width: 90%;
+    flex-direction: column;
+    min-height: 20rem;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .card img {
+    width: 100%;
+  }
+
+  .card article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
