--- a/web/src/styles/pages/ListStudents.module.css
+++ b/web/src/styles/pages/ListStudents.module.css
@@ -3,7 +3,7 @@
   background: var(--white);
   display: flex;
   width: 100%;
-  height: 10rem;
+  min-height: 10rem;
   align-items: center;
   flex-direction: column;
   border-bottom: 1px solid #000;
@@ -49,6 +49,13 @@
   pointer-events: none;
 }
 
+.header > svg {
+  position: absolute;
+  bottom: 3rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .container {
   background: var(--light);
   width: 100%;
@@ -64,11 +71,13 @@
 }
 
 .list {
-  width: 70%;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  grid-template-columns: repeat(2, 40%);
+  justify-items: center;  
   justify-content: center;
+  gap: 1rem;
+  background: var(--light);
 }
 
 .card {
@@ -87,6 +96,7 @@
   height: 140px;
   width: 140px;
   border-radius: 6px;
+  object-fit: cover;
 }
 
 .card article {
@@ -106,7 +116,7 @@
   }
 
   .header h1 {
-    margin: 0;
+    margin-top: -2.4rem;
   }
 
   .header .select {
@@ -129,6 +139,14 @@
 
   .card {
     width: 90%;
+    flex-direction: column;
+    height: 20rem;
+    text-align: center;
+    justify-content: space-evenly;
+  }
+
+  .card img {
+    width: 100%;
   }
 
   .card:last-child {
