--- a/web/src/styles/components/LoginModal.module.css
+++ b/web/src/styles/components/LoginModal.module.css
@@ -58,7 +58,7 @@
     width: 90%;
     height: 500px;
   }
-
+  
   .form {
     width: 90%;
     display: flex;
@@ -66,11 +66,13 @@
     align-items: center;
   }
 
-  .form input {
-    width: 100%;
-  }
-
   .form button {
     width: 90%;
+  }
+}
+
+@media (max-width: 435px) {
+  .modal .form input {
+    width: 100%;
   }
 }
