--- a/web/src/styles/components/Header.module.css
+++ b/web/src/styles/components/Header.module.css
@@ -27,7 +27,12 @@
   cursor: pointer;
 }
 
+.header a::after {
+  visibility: hidden;
+}
+
 .header a:hover::after {
+  visibility: initial;
   content: '';
   position: absolute;
   left: 0;
@@ -39,6 +44,7 @@
 }
 
 header a:not( :hover )::after {
+  visibility: hidden;
   content: '';
   position: absolute;
   left: 0;
@@ -64,11 +70,11 @@ header a:not( :hover )::after {
 @keyframes slideLeft {
   from {
     width: 100%;
-    height: 2px
+    visibility: initial;
   } 
   to {
-    width: 0;
-    height: 0;
+    width: 0%;
+    visibility: hidden;
   }
 }
 
